Fixed layout issue

--- a/src/app/layout/default-layout/default-layout.component.scss
+++ b/src/app/layout/default-layout/default-layout.component.scss
@@ -4,5 +4,4 @@
   margin-top: 64px;
   overflow: hidden;
   position: relative;
-  display: flex;
 }
